# SpinDeck

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  LICENSE  README.md  README.zh-Hans.md  eslint.config.ts  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: release.yml
apps/desktop/: .gitignore  package.json
apps/desktop/scripts/: fix-android-icon-bg.mjs  generate-icons.mjs  prepare-dev-resources.mjs  prepare-resources.mjs  serve.mjs
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/icons/android/values/: ic_launcher_background.xml
apps/desktop/src-tauri/src/: accessibility.rs  lib.rs  main.rs  server.rs
apps/web/: eslint.config.ts  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
apps/web/app/: app.css  i18n.ts  root.tsx  routes.ts
apps/web/app/components/: BrandLogo.tsx  CreatePlaylistModal.tsx  DesktopDragRegion.tsx  PlaylistCard.tsx  PlaylistShelf.tsx  (+2 more)
docs/: README.md  index.md  package.json  tsconfig.json  vite.config.ts
docs/.vitepress/: config.mts  tsconfig.json
docs/.vitepress/theme/: index.ts  locale-redirect.ts  release-nav.ts
docs/en/: index.md
docs/en/guide/: desktop.md  extending-ui.md  extending-vinyl-ui.md  getting-started.md  platforms.md
docs/guide/: getting-started.md  platforms.md
docs/public/: _redirects
docs/zh/: index.md
docs/zh/guide/: desktop.md  extending-ui.md  extending-vinyl-ui.md  getting-started.md  platforms.md
scripts/: set-version.mjs
(+44 files in other folders)
