[package]
name = "spindeck-desktop"
version = "0.1.0"
description = "SpinDeck desktop application"
authors = ["Cherry Fu"]
edition = "2021"

[[bin]]
name = "SpinDeck"
path = "src/main.rs"

[lib]
name = "spindeck_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
